--- a/scss/public/css/app.main.scss
+++ b/scss/public/css/app.main.scss
@@ -8,6 +8,7 @@
 @import "modules/_browser_type";
 @import "modules/_fonts";
 @import "modules/_no_user_select";
+@import "modules/_animation";
 
 // Components
 @import "partials/_growth";
