make some more room btw the table and the scroll bar

--- a/scss/partials/_finances_edit.scss
+++ b/scss/partials/_finances_edit.scss
@@ -1,7 +1,7 @@
 div.finances {
   div.finances-body.edit {
     position: relative;
-    width: 650px;
+    width: 640px;;
 
     table {
       margin-bottom: 0px;
