--- a/scss/partials/_topic_overlay.scss
+++ b/scss/partials/_topic_overlay.scss
@@ -77,7 +77,7 @@ $topic_overlay_text_color: #2d2d2d;
 
           div.topic-overlay-content {
             margin: 10px 0px 10px 0px;
-            padding: 15px 50px 15px 50px;
+            padding: 15px 0px 15px 0px;
             max-height: 515px;
             height: 100%;
             overflow: scroll;
@@ -87,14 +87,14 @@ $topic_overlay_text_color: #2d2d2d;
             div.topic-overlay-headline {
               border: 1px solid transparent;
               height: 32px;
-              margin-left: 1px;
-              margin-bottom: 18px;
+              margin: 0px 50px 18px 51px;
               font-weight: 600;
               font-size: 20px;
               color: $topic_overlay_text_color;
             }
 
             div.topic-overlay-body {
+              margin: 0 50px;
               border: 1px solid transparent;
               font-size: 16px;
               line-height: 1.6;
@@ -116,6 +116,11 @@ $topic_overlay_text_color: #2d2d2d;
             }
 
             @include topic_navigation();
+
+            div.topic-navigation{
+              margin: 0 50px;
+              width: 560px;
+            }
           }
         }
 
