reduce the indentation of ul and ol in the body

--- a/scss/partials/_topic_body.scss
+++ b/scss/partials/_topic_body.scss
@@ -32,6 +32,15 @@ div.topic-body {
     border: 1px solid black;
   }
 
+  ul, ol {
+    padding-left: 30px;
+
+    li {
+      margin: 0;
+      padding: 0;
+    }
+  }
+
   img {
 
     @include mobile() {
