--- a/scss/partials/_stakeholder_update.scss
+++ b/scss/partials/_stakeholder_update.scss
@@ -52,7 +52,6 @@ div.stakeholder-update {
   div.stakeholder-update {
 
     div.company-header {
-      border-bottom: 1px solid $oc_gray_2;
       padding-bottom: 46px;
     }
 
@@ -67,13 +66,7 @@ div.stakeholder-update {
     div.update-internal {
 
       div.sections {
-        @include mobile(){
-          background-color: #d9d9d9;
-        }
-
-        @include big_web(){
-          background-color: $oc_gray_1;
-        }
+        background-color: white;
 
         div.update-intro {
           width: 930px;
@@ -84,7 +77,6 @@ div.stakeholder-update {
           padding: 10px 0px;
 
           div.update-sections-internal{
-            box-shadow: 1px 1px 1px 0 #bababa;
             background-color: white;
             padding: 10px;
             width: 930px;
@@ -115,7 +107,7 @@ div.stakeholder-update {
 
         @include big_web(){
           margin-left: 0px;
-          width: 650px;
+          width: 100%;
         }
 
         @include mobile(){
