--- a/scss/partials/_stakeholder_update.scss
+++ b/scss/partials/_stakeholder_update.scss
@@ -69,7 +69,7 @@ div.stakeholder-update {
         background-color: white;
 
         div.update-intro {
-          width: 930px;
+          max-width: 930px;
           margin: 0 auto;
         }
 
@@ -79,7 +79,7 @@ div.stakeholder-update {
           div.update-sections-internal{
             background-color: white;
             padding: 10px;
-            width: 930px;
+            max-width: 930px;
             margin: 8px auto;
           }
         }
