move X button and side drawer to the right

--- a/scss/partials/_drawer_toggler.scss
+++ b/scss/partials/_drawer_toggler.scss
@@ -4,7 +4,7 @@ $icon_size: 24px;
 div.drawer-toggler {
   position: absolute;
   top: 0px;
-  left: 0px;
+  right: 15px;
   width: $icon_size;
   height: $icon_size;
   z-index: 1029;
