add su list css

--- a/scss/public/css/app.main.scss
+++ b/scss/public/css/app.main.scss
@@ -60,3 +60,4 @@
 @import "partials/_drawer_toggler";
 @import "partials/_side_drawer";
 @import "partials/_topic_overlay_edit";
+@import "partials/_su_list";
