cut the SU list size to 550px

--- a/scss/partials/_su_list.scss
+++ b/scss/partials/_su_list.scss
@@ -11,6 +11,8 @@ div.updates {
     background-color: white;
     
     div.su-update {
+      width: 550px;
+
       div.su-title {
         font-size: 22px;
         font-weight: 600;
