--- a/scss/public/css/app.main.scss
+++ b/scss/public/css/app.main.scss
@@ -61,3 +61,4 @@
 @import "partials/_side_drawer";
 @import "partials/_topic_overlay_edit";
 @import "partials/_su_list";
+@import "partials/_stakeholder_update_header";
