--- a/scss/partials/_stakeholder_update.scss
+++ b/scss/partials/_stakeholder_update.scss
@@ -66,6 +66,44 @@ div.stakeholder-update {
 
       div.sections {
         background-color: white;
+        position: relative;
+
+        div.floating-buttons{
+          float: right;
+          width: 160px;
+          position: fixed;
+          top: 10px;
+          right: 150px;
+
+          button {
+            background-color: transparent;
+            border: 0px;
+            margin: 0;
+            padding: 0;
+            outline: none;
+            font-size: 12px;
+          }
+
+          button.cancel {
+            width: 30px;
+            height: 25px;
+            margin-top: 20px;
+            margin-right: 20px;
+            float: right;
+          }
+
+          button.save {
+            width: 90px;
+            height: 25px;
+            border: 1px solid $oc_gray_3;
+            box-shadow: 1px 1px 1px 0 $topic_overlay_border_color;
+            margin-top: 20px;
+            margin-right: 15px;
+            background-color: $oc_green;
+            color: white;
+            float: right;
+          }
+        }
 
         div.update-sections {
           padding: 10px 0px;
@@ -78,6 +116,17 @@ div.stakeholder-update {
 
             div.update-sections-internal-width {
               max-width: 570px;
+              position: relative;
+
+              div.overlay {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                z-index: 10;
+                background-color: rgba(255, 255, 255, 0.4);
+              }
             }
           }
         }
