add su footer style

--- a/scss/public/css/app.main.scss
+++ b/scss/public/css/app.main.scss
@@ -62,3 +62,4 @@
 @import "partials/_topic_overlay_edit";
 @import "partials/_su_list";
 @import "partials/_stakeholder_update_header";
+@import "partials/_stakeholder_update_footer";
