--- a/scss/mixins/_reusable.scss
+++ b/scss/mixins/_reusable.scss
@@ -92,3 +92,74 @@
     }
   }
 }
+
+@mixin rich-editor-body($text_color: #444444){
+  border: 1px solid transparent;
+  cursor: text;
+
+  &:focus,
+  &.editing {
+    outline: none;
+    overflow: hidden;
+    border: 1px solid black;
+  }
+
+  * {
+    margin: 0;
+    padding: 0;
+    color: $text_color;
+    font-weight: normal;
+
+    font-size: 16px;
+    line-height: 1.6;
+  }
+
+  h1, h2, h3, h4, h5 {
+    font-weight: 900;
+
+    @include mobile() {
+      font-size: 17px;
+    }
+
+    @include big_web(){
+      font-size: 17px;
+    }
+  }
+
+  ul, ol {
+    padding-left: 30px;
+
+    li {
+      margin: 0;
+      padding: 0;
+    }
+  }
+
+  img {
+
+    @include mobile() {
+      width: calc(100% + 44px);
+      margin-left: -22px;
+    }
+
+    @include big_web(){
+      width: 100%;
+    }
+
+    margin-bottom: 10px;
+  }
+
+  *::selection {
+    background: #C1E7F4;
+  }
+
+  *::-moz-selection {
+    background: #C1E7F4;
+  }
+
+  a {
+    text-decoration: underline;
+    color: black;
+    pointer-events: none;
+  }
+}
