change page backgorund-color to fix issue with the growing SU outro

--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -19,7 +19,7 @@ html, body {
   font-family: $oc_main_font;
   font-size: 16px;
   height: 100%;
-  background-color: $oc_gray_1;
+  background-color: white;
 }
 
 .no-scroll {
