--- a/scss/partials/_stakeholder_update.scss
+++ b/scss/partials/_stakeholder_update.scss
@@ -68,6 +68,31 @@ div.stakeholder-update {
         background-color: white;
         position: relative;
 
+        div.share-su {
+          width: 910px;
+          margin: 0 auto;
+          padding-bottom: 20px;
+          z-index: 100;
+
+          button.share {
+            margin: 0;
+            padding: 0;
+            outline: none;
+            font-size: 12px;
+            width: 90px;
+            height: 25px;
+            border: 1px solid $oc_gray_3;
+            box-shadow: 1px 1px 1px 0 $topic_overlay_border_color;
+            background-color: $oc_blue;
+            color: white;
+
+            &[disabled] {
+              background-color: $oc_blue;
+              opacity: 0.6;
+            }
+          }
+        }
+
         div.floating-buttons{
           float: right;
           width: 160px;
@@ -125,7 +150,7 @@ div.stakeholder-update {
                 width: 100%;
                 height: 100%;
                 z-index: 10;
-                background-color: rgba(255, 255, 255, 0.4);
+                background-color: rgba(255, 255, 255, 0.7);
               }
             }
           }
