--- a/scss/public/css/app.main.scss
+++ b/scss/public/css/app.main.scss
@@ -56,10 +56,10 @@
 @import "partials/_d3_column_chart";
 @import "partials/_d3_dot_chart";
 @import "partials/_topic_overlay";
-@import "partials/_stakeholder_update";
+@import "partials/_su_list";
 @import "partials/_drawer_toggler";
 @import "partials/_side_drawer";
 @import "partials/_topic_overlay_edit";
 @import "partials/_su_list";
-@import "partials/_stakeholder_update_header";
-@import "partials/_stakeholder_update_footer";
+@import "partials/_su_edit_header";
+@import "partials/_su_edit_footer";
