remove css selector of dead components

--- a/scss/partials/_topic_finances_headline.scss
+++ b/scss/partials/_topic_finances_headline.scss
@@ -31,11 +31,11 @@ div.topic-finances-headline {
         padding: 0;
         margin: 0;
 
-        &.cash, &.revenue {
+        &.cash {
           color: $oc_green_regular;
         }
 
-        &.costs, &.burn-rate {
+        &.costs {
           color: $oc_red_regular;
         }
 
