fix dot chart label selector

--- a/scss/partials/_d3_dot_chart.scss
+++ b/scss/partials/_d3_dot_chart.scss
@@ -7,7 +7,7 @@ div.d3-dot-container{
       cursor: pointer;
     }
 
-    text.chart-label{
+    text.dot-chart-label{
       font-family: $oc_main_font;
       font-size: 24px;
       font-weight: 500;
