--- a/scss/partials/_topic_overlay_edit.scss
+++ b/scss/partials/_topic_overlay_edit.scss
@@ -11,11 +11,16 @@ div.topic-overlay-edit {
   }
 
   button.cancel {
-    width: 30px;
+    width: 90px;
     height: 25px;
-    margin-top: 20px;
-    margin-right: 20px;
+    margin-top: 23px;
+    margin-right: 15px;
     float: right;
+
+    &.save-visible {
+      margin-top: 50px;
+      margin-right: -90px;
+    }
   }
 
   button.save-topic {
