add Done button to go back to /slug

--- a/scss/partials/_company_profile.scss
+++ b/scss/partials/_company_profile.scss
@@ -2,4 +2,10 @@
 
 div.profile-container {
   padding-top: 65px;
+
+  button.btn.btn-save {
+    margin-left: 192px;
+    background-color: $oc_green;
+    color: white;
+  }
 }
