--- a/scss/partials/_company_profile.scss
+++ b/scss/partials/_company_profile.scss
@@ -3,9 +3,26 @@
 div.profile-container {
   padding-top: 65px;
 
+  img.loading-spinner {
+    margin-left: 225px;
+    margin-bottom: 10px;
+    width: 50px;
+    opacity: 0;
+
+    &.loading {
+      opacity: 1;
+    }
+  }
+
   button.btn.btn-save {
-    margin-left: 192px;
+    margin-left: 242px;
     background-color: $oc_green;
     color: white;
+  }
+
+  img.logo-preview {
+    margin-left: 242px;
+    max-width: 50px;
+    max-height: 50px;
   }
 }
