--- a/scss/modules/_fonts.scss
+++ b/scss/modules/_fonts.scss
@@ -1,2 +1,2 @@
-$oc_main_font: "proxima-nova";
-$oc_headers_font: "proxima-nova";
+$oc_main_font: 'Open Sans', sans-serif;
+$oc_headers_font: 'Domine', serif;
