--- a/scss/partials/_user_profile.scss
+++ b/scss/partials/_user_profile.scss
@@ -1,5 +1,7 @@
 div.user-profile {
   margin-top: 10px;
+  width: 500px;
+  margin: 20px auto;
   div.panel-heading {
     font-size: 12px;
     h4 {
