--- a/scss/partials/_company_profile.scss
+++ b/scss/partials/_company_profile.scss
@@ -4,7 +4,7 @@ div.profile-container {
   padding-top: 65px;
 
   img.loading-spinner {
-    margin-left: 225px;
+    margin-left: 25px;
     margin-bottom: 10px;
     width: 50px;
     opacity: 0;
@@ -20,15 +20,31 @@ div.profile-container {
   }
 
   div.logo-container {
-    p.help-block span{
-      width: 100px;
+    div.help-block{
+      &.logo-help-block {
+        margin-top: 40px;
+        margin-left: 240px;
+        @media screen and (max-width: 1200px){
+          margin-left: 200px;
+        }
+      }
+      span{
+        width: 100px;
+      }
     }
   }
 
   button.btn.btn-save {
+    border: 1px solid rgba(0, 0, 0, 0.4);
+    font-size: 10px;
+    margin-right: 20px;
+    height: 34px;
+    width: 59px;
+    border-radius: 4px;
     margin-left: 242px;
     background-color: $oc_green;
     color: white;
+    padding-top: 10px;
   }
 
   img.logo-preview {
