remove underline, use border bottom to show a yellow thick line under links

--- a/scss/mixins/_reusable.scss
+++ b/scss/mixins/_reusable.scss
@@ -156,8 +156,9 @@
   }
 
   a {
-    text-decoration: underline;
+    text-decoration: none;
     color: black;
     pointer-events: none;
+    border-bottom: 6px solid $oc_yellow;
   }
 }
