--- a/scss/partials/_topic.scss
+++ b/scss/partials/_topic.scss
@@ -110,6 +110,13 @@ div.topic-list {
               font-family: $oc_headers_font;
               font-size: 12px;
               line-height: 1.3;
+              overflow: hidden;
+              text-overflow: ellipsis;
+              white-space: nowrap;
+            }
+
+            img{
+              display: none;
             }
           }
 
