--- a/scss/partials/_company_avatar.scss
+++ b/scss/partials/_company_avatar.scss
@@ -1,4 +1,10 @@
 div.company-avatar {
+  width: 50px;
+  height: 50px;
+  border: solid 1px rgba(78, 90, 107, 0.2);
+  padding: 5px;
+  float: left;
+
   a, 
   a:hover {
     text-decoration: none;
@@ -6,8 +12,8 @@ div.company-avatar {
 
   img.company-avatar-img{
     float: left;
-    margin-top: -10px;
-    height: 35px;
+    max-width: 40px;
+    max-height: 40px;
   }
 
   div.company-avatar-img {
