set the top margin of the topic list using the navbar height var so the content doesn't get hidden under it

--- a/scss/partials/_topic_list.scss
+++ b/scss/partials/_topic_list.scss
@@ -14,6 +14,7 @@ div.topic-list{
   position: relative;
   content: "";
   padding-bottom: 20px;
+  margin-top: #{$navbar_height}px;
 
   @include mobile(){
     background-color: #d9d9d9;
