Emoji for text headline and body.

--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -81,6 +81,11 @@ span img.user-icon {
   margin-right: 5px;
 }
 
+img.emojione {
+  height: 20px !important;
+  width: 20px !important;
+}
+
 span.num.red {
   color: red;
 }
