--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -81,9 +81,11 @@ span img.user-icon {
   margin-right: 5px;
 }
 
-img.emojione {
-  height: 20px !important;
-  width: 20px !important;
+svg.emojione {
+  height: 18px;
+  width: 18px;
+  display: inline-block;
+  vertical-align: text-top;
 }
 
 span.num.red {
