--- a/scss/public/css/app.main.scss
+++ b/scss/public/css/app.main.scss
@@ -58,3 +58,5 @@
 @import "partials/_su_edit_header";
 @import "partials/_su_edit_footer";
 @import "partials/_stakeholder_update";
+@import "partials/_footer";
+@import "partials/_login_button";
