--- a/scss/partials/_footer.scss
+++ b/scss/partials/_footer.scss
@@ -17,7 +17,12 @@ div.footer {
     padding: 30px;
     height: 90px;
 
-    & > a {
+    a.oc-logo img {
+      width: 30px;
+      height: 30px;
+    }
+
+    a.footer-link {
       border: solid 1px rgba(78, 90, 107, 0.5);
       opacity: 0.5;
       font-weight: 700;
