fullscreen topic component and style

--- a/scss/public/css/app.main.scss
+++ b/scss/public/css/app.main.scss
@@ -60,3 +60,4 @@
 @import "partials/_stakeholder_update";
 @import "partials/_footer";
 @import "partials/_login_button";
+@import "partials/_fullscreen_topic";
