add topic attribution

--- a/scss/partials/_fullscreen_topic.scss
+++ b/scss/partials/_fullscreen_topic.scss
@@ -56,5 +56,13 @@ div.fullscreen-topic {
       line-height: 1.8;
       color: $oc_gray_5;
     }
+
+    div.topic-attribution {
+      margin-top: 10px;
+      font-family: $oc_headers_font;
+      font-size: 18px;
+      line-height: 1.8;
+      color: $oc_gray_5;
+    }
   }
 }
