--- a/scss/partials/_navbar.scss
+++ b/scss/partials/_navbar.scss
@@ -12,6 +12,7 @@ nav.navbar {
   border-top: 4px solid $oc_yellow;
   margin: 0px;
   height: #{$navbar_height}px;
+  border-bottom: 1px solid $oc_gray_6;
 
   &>div{
     margin: 0px;
