make sure topic body in front card is always formatted the same

--- a/scss/partials/_fullscreen_topic.scss
+++ b/scss/partials/_fullscreen_topic.scss
@@ -48,7 +48,7 @@ div.fullscreen-topic {
       background-color: rgba(77, 89, 106, 0.2);
     }
 
-    div.topic-body {
+    div.topic-body, div.topic-body *{
       margin-top: 21px;
       font-family: $oc_headers_font;
       font-size: 18px;
